--- a/delivery-backend/.env
+++ b/delivery-backend/.env
@@ -3,3 +3,5 @@ TWILIO_AUTH_TOKEN=your_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
 GOOGLE_API_KEY=AIzaSyBJx3BhuXQPo97BXMmGj_hwnOLOlV-O2EQ
 REACT_APP_GOOGLE_MAPS_API_KEY=AIzaSyBJx3BhuXQPo97BXMmGj_hwnOLOlV-O2EQ
+PORT=3001
+FRONTEND_URL=https://taap-man-frontend.vercel.app
